--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         </div>
         <div id="page1">
             <div id="right-text">
-                <h3>Jabido Paul • Student About Me</h3>
+                <h3>Student About Me</h3>
                 
             </div>
             <div id="left-text">
@@ -319,7 +319,7 @@
             <div id="text2">
                 <p>LET'S HAVE A BLAST! LET'S JUST THROW AWAY AGE, GENDER, REGION, <br> STATUS, ETC., DON'T COMPETE, DON'T FIGHT, COOPERATE AND SHARE <br> WITH EACH OTHER AND ENJOY IT TOGETHER! SO THAT YOU CAN STAND <br> THERE IN THE NOT-TOO-DISTANT FUTURE AND DREAM OF ANOTHER NEW <br> FUTURE</p>
             </div>
-            <a href="https://example.com/community" class="cta-box">JOIN COMMUNITY</a>
+            <a href="project.html" class="cta-box">JOIN COMMUNITY</a>
         </div>
         <div id="page3">
             <div id="text3">
