--- a/project.html
+++ b/project.html
@@ -113,7 +113,7 @@
                         <div class="stripe"></div>
                         <ul class="links-wrap">
                             <li class="btn btn-link">
-                                <a href="https://dennissnellenberg.com" class="btn-click magnetic" data-strength="24" data-strength-text="12">
+                                <a href="index.html" class="btn-click magnetic" data-strength="24" data-strength-text="12">
                                 <span class="btn-text">
                                     <span class="btn-text-inner">Home</span>
                                 </span>
@@ -152,7 +152,7 @@
 </div>   <div class="container medium">
       <div class="row">
          <div class="flex-col once-in">
-            <h1><span>Creating next level </span><span>digital products</span></h1>
+            <h1><span>Creating next level </span><span>webpages</span></h1>
          </div>
       </div>
    </div>
@@ -537,95 +537,87 @@
         </g>
     </g>
 </svg></div>
-                                    <h2><span><div class="profile-picture"></div> Let’s work  </span><span>together</span></h2>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="flex-col">
-                                    <div class="stripe"></div>
-                                    <div class="btn-fixed">
-                                        <div class="btn btn-round" data-scroll data-scroll-speed="-1" data-scroll-direction="horizontal" data-scroll-position="bottom" data-scroll-offset="-50%, 0">
-                                            <a href="https://dennissnellenberg.com/contact" class="btn-click magnetic " data-strength="100" data-strength-text="50">
-                                                <div class="btn-fill"></div>
-                                                <span class="btn-text">
-                                                    <span class="btn-text-inner">Get in touch</span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="flex-col">
-                                    <div class="btn btn-normal">
-                                        <a href="mailto:info@dennissnellenberg.com" class="btn-click magnetic" data-strength="25" data-strength-text="15">
-                                        <div class="btn-fill"></div>
-                                        <span class="btn-text">
-                                            <span class="btn-text-inner change">info@dennissnellenberg.com</span>
-                                        </span>
-                                        </a>
-                                    </div>
-                                    <div class="btn btn-normal">
-                                        <a href="tel:+31627847430" class="btn-click magnetic" data-strength="25" data-strength-text="15">
-                                        <div class="btn-fill"></div>
-                                        <span class="btn-text">
-                                            <span class="btn-text-inner change">+31 6 27 84 74 30</span>
-                                        </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="container no-padding">
-                            <div class="row bottom-footer">
-                                <div class="flex-col">
-                                    <div class="credits">
-                                        <h5>Version</h5>
-                                        <p>2022 © Edition</p>
-                                    </div>
-                                    <div class="time">
-                                        <h5>Local time</h5>
-                                        <p><span id="timeSpan">09:41 PM CET</span></p>
-                                    </div>
-                                </div>
-                                <div class="flex-col">
-                                    <div class="socials">
-                                        <h5>Socials</h5>
-                                        <ul>
-                                            <li class="btn btn-link btn-link-external">
-                                                <a href="https://www.awwwards.com/dennissnellenberg/" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
-                                                    <span class="btn-text">
-                                                        <span class="btn-text-inner">Awwwards</span>
-                                                    </span>
-                                                </a>
-                                            </li>
-                                            <li class="btn btn-link btn-link-external">
-                                                <a href="https://www.instagram.com/codebydennis/" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
-                                                    <span class="btn-text">
-                                                        <span class="btn-text-inner">Instagram</span>
-                                                    </span>
-                                                </a>
-                                            </li>
-                                            <li class="btn btn-link btn-link-external">
-                                                <a href="https://twitter.com/codebydennis" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
-                                                    <span class="btn-text">
-                                                        <span class="btn-text-inner">Twitter</span>
-                                                    </span>
-                                                </a>
-                                            </li>
-                                            <li class="btn btn-link btn-link-external">
-                                                <a href="https://www.linkedin.com/in/dennissnellenberg/" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
-                                                    <span class="btn-text">
-                                                        <span class="btn-text-inner">LinkedIn</span>
-                                                    </span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                        <div class="stripe"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+<h2><span><div class="final2.jpg"></div> Let’s work  </span><span>together</span></h2>
+</div>
+</div>
+<div class="row">
+<div class="flex-col">
+    <div class="stripe"></div>
+    <div class="btn-fixed">
+        <div class="btn btn-round" data-scroll data-scroll-speed="-1" data-scroll-direction="horizontal" data-scroll-position="bottom" data-scroll-offset="-50%, 0">
+            <a href="" class="btn-click magnetic " data-strength="100" data-strength-text="50">
+                <div class="btn-fill"></div>
+                <span class="btn-text">
+                    <span class="btn-text-inner">Get in touch</span>
+                </span>
+            </a>
+        </div>
+    </div>
+</div>
+</div>
+<div class="row">
+<div class="flex-col">
+    <div class="btn btn-normal">
+        <a href="mailto:info@dennissnellenberg.com" class="btn-click magnetic" data-strength="25" data-strength-text="15">
+        <div class="btn-fill"></div>
+        <span class="btn-text">
+            <span class="btn-text-inner change">info@paulchristian.jabido@cit.edu</span>
+        </span>
+        </a>
+    </div>
+    <div class="btn btn-normal">
+        <a href="tel:+31627847430" class="btn-click magnetic" data-strength="25" data-strength-text="15">
+        <div class="btn-fill"></div>
+        <span class="btn-text">
+            <span class="btn-text-inner change">+ 95 67 25 23 08 </span>
+        </span>
+        </a>
+    </div>
+</div>
+</div>
+</div>
+<div class="container no-padding">
+    <div class="row bottom-footer">
+        <div class="flex-col">
+            <div class="credits">
+                <h5>Version</h5>
+                <p>2025 © Edition</p>
+            </div>
+            <div class="time">
+
+            </div>
+        </div>
+        <div class="flex-col">
+            <div class="socials">
+                <h5>Socials</h5>
+                <ul>
+                    <li class="btn btn-link btn-link-external">
+                        <a href="https://www.instagram.com/p.chan19?igsh=MWZiY3d6azBoMGI5bQ==" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
+                            <span class="btn-text">
+                                <span class="btn-text-inner">Instagram</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="btn btn-link btn-link-external">
+                        <a href="https://www.facebook.com/paul.jabido.1" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
+                            <span class="btn-text">
+                                <span class="btn-text-inner">Facebook</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="btn btn-link btn-link-external">
+                        <a href="https://www.tiktok.com/@sly.vocals" target="_blank" class="btn-click magnetic" data-strength="20" data-strength-text="10">
+                            <span class="btn-text">
+                                <span class="btn-text-inner">Tiktok</span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+                <div class="stripe"></div>
+            </div>
+        </div>
+    </div>
+</div>
                     </footer>
                     <div class="overlay overlay-gradient"></div>
                 </div>
